# autoshake

./: Cargo.toml  auto_shake_gui.py  build.py  requirements.txt  setup.py
.github/workflows/: build.yml
src/: config.rs  detect.rs  main.rs
