[package]
name = "auto_shake_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
enigo = { version = "0.3", features = ["serde"] } 
global-hotkey = "0.6"
image = "0.25"
imageproc = "0.25"
xcap = "0.1" # Use a known version, 0.1 is safe-ish, or just "0.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
directories = "5.0"
log = "0.4"
env_logger = "0.11"
winit = "0.29" # eframe uses winit, might need types from it
